--- a/css/components/9-footer.css
+++ b/css/components/9-footer.css
@@ -32,3 +32,9 @@
     color: white;
     text-decoration: underline;
 }
+
+@media screen and (max-width: 375px) {
+    .contact-details {
+        font-size: 12px;
+    }
+}
