--- a/css/components/1-header.css
+++ b/css/components/1-header.css
@@ -147,3 +147,36 @@ header {
     }
 }
 /* END OF HEADER RIGHT */
+
+@media screen and (max-width: 375px) {
+    header {
+        position: relative;
+    }
+    .header-content {
+        flex-direction: column;
+        padding-top: 15px;
+        margin: 0px auto;
+    }
+    .header-left-logo img{
+        width: 60px;
+    }
+    .header-left-title {
+        margin-left: 10px;
+    }
+    .header-left-title-company-name {
+        font-size: 26px;
+    }
+    .header-left-title-slogan {
+        font-size: 15px;
+    }
+    .header-right {
+        width: 100%;
+    }
+    .header-right ul{
+       grid-template-columns: 2fr 1fr 2fr;
+        font-size: 13px;
+        grid-gap: 15px 10px;
+        margin-bottom: 0px;
+        margin-top: 10px;
+    }
+}
