--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ body {
     height: 450px;
     background: #b3b3b3;
 }
+.product-detail-popup  {
+    height: auto;
+}
+
 .custom_container {
     display: flex;
     justify-content: space-between;
@@ -102,6 +106,11 @@ body {
     }
     .custom_container {
        padding-bottom: 0px;
+    }
+    .product-detail-popup {
+        width: 90%;
+        font-size: 15px;
+        height: 200px;
     }
 }
 .move-link {
