change mobile size to 441px handle showing fanpages in mobile site

--- a/css/components/3-introduction.css
+++ b/css/components/3-introduction.css
@@ -29,8 +29,11 @@
 }
 /* END OF ASSOCIATES*/
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 441px) {
     .headings-black {
         font-size: 25px;
+    }
+    .intro-text {
+        text-align: justify;
     }
 }
