--- a/css/components/9-footer.css
+++ b/css/components/9-footer.css
@@ -8,12 +8,12 @@
 }
 @media screen and (max-width: 1920px) {
     .contact {
-        height: 300px;
+        height: 55%;
     }
 }
 @media screen and (max-width: 1200px) {
     .contact {
-        height: 300px;
+        height: 55%;
     }
 }
 .seperator {
