--- a/css/components/9-footer.css
+++ b/css/components/9-footer.css
@@ -1,6 +1,7 @@
 .contact {
     background-color: rgba(179, 179, 179, 1);
     margin-top: 50px;
+    padding-bottom: 10px;
 }
 .contact-intro {
     font-size: 35px;
