update background color, change logo to feeling media

--- a/css/components/2-current-information.css
+++ b/css/components/2-current-information.css
@@ -2,7 +2,7 @@
 /*    max-height: 800px;*/
 /*}*/
 #slider-place .owl-nav {
-    background: #B3B3B3 !important;
+    background: #B37D29 !important;
     margin-top: 0px !important;
 }
 .owl-nav {
