--- a/css/components/9-footer.css
+++ b/css/components/9-footer.css
@@ -1,5 +1,5 @@
 .contact {
-    background-color: rgba(179, 179, 179, 1);
+    background-color: #B37D29;
     margin-top: 50px;
     padding-bottom: 10px;
 }
