--- a/css/components/1-header.css
+++ b/css/components/1-header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgba(179, 179, 179, 1);
+    background-color: #B37D29;
     position: fixed;
     top: 0;
     z-index: 19;
